fix: 测试上传合并，待解决合并报错问题